--- a/turismo.html
+++ b/turismo.html
@@ -90,13 +90,13 @@
                 <img src="images/turismo/corralejo-dunas.jpg?v=2" alt="Parque Natural de Corralejo" loading="lazy">
                 <div class="tourism-info">
                     <h3>Parque Natural de Corralejo</h3>
-                    <p>Explora las impresionantes dunas de arena dorada y las vistas al mar cristalino en uno de los parques naturales más emblemáticos de la isla. Las Grandes Playas se extienden por kilómetros junto al azul turquesa del Atlántico: madruga para evitar el viento y disfruta de un paseo entre dunas.</p>
+                    <p>Explora las impresionantes dunas de arena dorada y el mar cristalino en uno de los parques más emblemáticos de la isla. Las Grandes Playas se extienden por kilómetros junto al turquesa del Atlántico. Aparcamientos señalizados en la FV-1; mejor al amanecer o atardecer y lleva agua y protección solar.</p>
                     <div class="features">
                         <span><i class="fas fa-leaf"></i> Naturaleza</span>
                         <span><i class="fas fa-mountain"></i> Dunas</span>
                         <span><i class="fas fa-road"></i> Fácil acceso</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=parque-natural-de-corralejo" class="btn">Más información</a>
                 </div>
             </article>
 
@@ -104,13 +104,13 @@
                 <img src="images/turismo/betancuria.jpg?v=2" alt="Betancuria" loading="lazy">
                 <div class="tourism-info">
                     <h3>Betancuria</h3>
-                    <p>Visita la antigua capital de Fuerteventura, un pueblo histórico con arquitectura colonial y museos fascinantes. Recorre sus calles empedradas, entra a la iglesia de Santa María y toma un café con vistas al barranco.</p>
+                    <p>Antigua capital con encanto histórico, arquitectura tradicional y museos. Pasea por sus calles empedradas, visita la iglesia de Santa María y acércate a los miradores cercanos. Hay restaurantes con cocina local y aparcamiento municipal en el centro.</p>
                     <div class="features">
                         <span><i class="fas fa-landmark"></i> Historia</span>
                         <span><i class="fas fa-building-columns"></i> Museo</span>
                         <span><i class="fas fa-binoculars"></i> Mirador</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=betancuria" class="btn">Más información</a>
                 </div>
             </article>
 
@@ -118,13 +118,13 @@
                 <img src="images/turismo/faro-morro-jable.jpg?v=2" alt="Faro de Morro Jable" loading="lazy">
                 <div class="tourism-info">
                     <h3>Faro de Morro Jable</h3>
-                    <p>Contempla las mejores puestas de sol de la isla desde este emblemático faro en el sur de Fuerteventura. Al atardecer, el cielo se tiñe de tonos dorados y rosados sobre la playa de Jandía.</p>
+                    <p>Atardeceres memorables junto a la playa de Jandía y su paseo marítimo. Acceso cómodo y servicios cercanos para familias. Excelente zona para caminar, fotografiar y relajarse con la brisa marina.</p>
                     <div class="features">
                         <span><i class="fas fa-sun"></i> Atardecer</span>
                         <span><i class="fas fa-compass"></i> Faro</span>
                         <span><i class="fas fa-person-walking"></i> Paseo marítimo</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=faro-de-morro-jable" class="btn">Más información</a>
                 </div>
             </article>
 
@@ -132,37 +132,37 @@
                 <img src="images/turismo/isla-de-lobos.jpg?v=2" alt="Isla de Lobos" loading="lazy">
                 <div class="tourism-info">
                     <h3>Isla de Lobos</h3>
-                    <p>Descubre este paraíso natural a solo 15 minutos en barco desde Corralejo, perfecto para senderismo y snorkel. Reserva con tiempo el permiso de visita y sigue el sendero hasta el Puertito para un baño inolvidable.</p>
+                    <p>Reserva natural a 15 minutos en barco desde Corralejo, ideal para senderismo y snorkel. Es imprescindible reservar permiso con antelación. Recorre senderos volcánicos señalizados, lleva agua y respeto por el entorno.</p>
                     <div class="features">
                         <span><i class="fas fa-person-hiking"></i> Senderismo</span>
                         <span><i class="fas fa-water"></i> Snorkel</span>
                         <span><i class="fas fa-ticket-simple"></i> Reserva</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=isla-de-lobos" class="btn">Más información</a>
                 </div></article>
 
             <article class="tourism-card">
                 <img src="images/turismo/el-cotillo.avif" alt="El Cotillo" loading="lazy">
                 <div class="tourism-info">
                     <h3>El Cotillo</h3>
-                    <p>Pueblo pesquero con encanto en la costa norte.</p>
+                    <p>Pueblo pesquero con lagunas de aguas turquesas y puestas de sol espectaculares. Perfecto para familias por sus calas protegidas. Gastronomía local con excelente pescado fresco frente al mar.</p>
                     <div class="features">
                         <span><i class="fas fa-fish"></i> Pescado fresco</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=el-cotillo" class="btn">Más información</a>
                 </div></article>
 
             <article class="tourism-card">
                 <img src="images/turismo/cofete.jpg" alt="Playa de Cofete" loading="lazy">
                 <div class="tourism-info">
                     <h3>Playa de Cofete</h3>
-                    <p>Una de las playas más salvajes y vírgenes de Canarias, rodeada de montañas y con un ambiente místico. El acceso por pista de tierra añade aventura, pero las vistas merecen cada bache.</p>
+                    <p>Una de las playas más vírgenes de Canarias, con arena dorada y montañas imponentes. Acceso por pista de tierra: conduce con precaución. No hay servicios; lleva agua, comida y evita los días de viento fuerte.</p>
                     <div class="features">
                         <span><i class="fas fa-mountain"></i> Naturaleza salvaje</span>
                         <span><i class="fas fa-camera-retro"></i> Fotografía</span>
                         <span><i class="fas fa-car"></i> 4x4 recomendado</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=playa-de-cofete" class="btn">Más información</a>
                 </div>
             </article>
 
@@ -170,13 +170,13 @@
                 <img src="images/turismo/ajuy.webp" alt="Cuevas de Ajuy" loading="lazy">
                 <div class="tourism-info">
                     <h3>Cuevas de Ajuy</h3>
-                    <p>Formaciones geológicas milenarias en la costa oeste, con cuevas excavadas por el mar y acantilados de roca volcánica. Pasea por el sendero costero y contempla la fuerza del océano.</p>
+                    <p>Formaciones geológicas milenarias con cuevas marinas y acantilados volcánicos. Sendero costero señalizado con barandillas y miradores; usa calzado cómodo. En el pueblo encontrarás restaurantes y aparcamiento.</p>
                     <div class="features">
                         <span><i class="fas fa-mountain"></i> Geología</span>
                         <span><i class="fas fa-water"></i> Cuevas marinas</span>
                         <span><i class="fas fa-person-walking"></i> Sendero</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=cuevas-de-ajuy" class="btn">Más información</a>
                 </div>
             </article>
 
@@ -184,36 +184,36 @@
                 <img src="images/turismo/la-oliva.avif" alt="La Oliva" loading="lazy">
                 <div class="tourism-info">
                     <h3>La Oliva</h3>
-                    <p>Villa histórica con la iglesia de Nuestra Señora de Candelaria y la Casa de los Coroneles, una de las edificaciones más importantes de la arquitectura civil canaria.</p>
+                    <p>Villa histórica con la iglesia de Nuestra Señora de la Candelaria y la Casa de los Coroneles. Patrimonio majorero en un entorno tranquilo. Aparcamiento en calles adyacentes y centro de arte cercano.</p>
                     <div class="features">
                         <span><i class="fas fa-church"></i> Patrimonio</span>
                         <span><i class="fas fa-home"></i> Arquitectura</span>
                         <span><i class="fas fa-palette"></i> Centro de arte</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=la-oliva" class="btn">Más información</a>
                 </div></article>
 
             <article class="tourism-card">
                 <img src="images/turismo/mirador-morro-velosa.jpg" alt="Mirador de Morro Velosa" loading="lazy">
                 <div class="tourism-info">
                     <h3>Mirador de Morro Velosa</h3>
-                    <p>Diseñado por César Manrique, ofrece vistas panorámicas a 360 grados del interior de Fuerteventura.</p>
+                    <p>Mirador icónico con panorámicas del interior de la isla. En días despejados verás gran parte de Fuerteventura. Acceso por carretera de montaña con curvas; conduce con precaución.</p>
                     <div class="features">
                         <span><i class="fas fa-eye"></i> Vistas panorámicas</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=mirador-de-morro-velosa" class="btn">Más información</a>
                 </div>
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/caleta-de-fuste.jpg" alt="Caleta de Fuste" loading="lazy">
+                <img src="images/turismo/caleta-de-Fuste.jpg" alt="Caleta de Fuste" loading="lazy">
                 <div class="tourism-info">
                     <h3>Caleta de Fuste</h3>
-                    <p>Centro turístico familiar con playa protegida, ideal para niños. Campo de golf y puerto deportivo.</p>
+                    <p>Destino familiar con playa protegida de oleaje, paseo marítimo y puerto deportivo. Actividades suaves y servicios a pie. Amplia oferta de restauración y fácil aparcamiento.</p>
                     <div class="features">
                         <span><i class="fas fa-child"></i> Familiar</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=caleta-de-fuste" class="btn">Más información</a>
                 </div>
             </article>
 
@@ -221,11 +221,11 @@
                 <img src="images/turismo/puerto-del-rosario-.jpg" alt="Puerto del Rosario" loading="lazy">
                 <div class="tourism-info">
                     <h3>Puerto del Rosario</h3>
-                    <p>Capital de la isla con murales artísticos urbanos, museos de arte y la Casa Museo Unamuno.</p>
+                    <p>Capital con arte urbano, museos y comercio local. Recorre la avenida marítima y las esculturas de la ciudad. Buenas conexiones de transporte público y servicios.</p>
                     <div class="features">
                         <span><i class="fas fa-paintbrush"></i> Arte urbano</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=puerto-del-rosario" class="btn">Más información</a>
                 </div>
             </article>
 
@@ -233,11 +233,11 @@
                 <img src="images/turismo/tindaya.webp" alt="Montaña de Tindaya" loading="lazy">
                 <div class="tourism-info">
                     <h3>Montaña de Tindaya</h3>
-                    <p>Montaña sagrada para los aborígenes majoreros, con grabados rupestres en su cumbre.</p>
+                    <p>Montaña sagrada con gran simbolismo aborigen y entorno arqueológico. Respeta las normas de protección y consulta posibles restricciones de acceso antes de tu visita.</p>
                     <div class="features">
                         <span><i class="fas fa-history"></i> Arqueología</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=montana-de-tindaya" class="btn">Más información</a>
                 </div>
             </article>
 
@@ -245,11 +245,11 @@
                 <img src="images/turismo/parque-natural-jandia.jpg" alt="Parque Natural de Jandía" loading="lazy">
                 <div class="tourism-info">
                     <h3>Parque Natural de Jandía</h3>
-                    <p>Reserva natural en el sur de la isla con playas infinitas y fauna endémica.</p>
+                    <p>Espacio protegido en el sur con playas casi infinitas, dunas y fauna endémica. Rutas de senderismo señalizadas y excelentes puntos para observar aves. Lleva agua y protección solar.</p>
                     <div class="features">
                         <span><i class="fas fa-leaf"></i> Naturaleza</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=parque-natural-de-jandia" class="btn">Más información</a>
                 </div>
             </article>
 
@@ -257,11 +257,11 @@
                 <img src="images/turismo/ecomuseo-la-alcogida.jpg" alt="Ecomuseo La Alcogida" loading="lazy">
                 <div class="tourism-info">
                     <h3>Ecomuseo La Alcogida</h3>
-                    <p>Conjunto de casas tradicionales restauradas que muestran la vida rural de Fuerteventura.</p>
+                    <p>Conjunto de casas tradicionales restauradas que recrean la vida rural majorera. Museo etnográfico al aire libre ideal para familias. Consulta horarios y actividades antes de ir.</p>
                     <div class="features">
                         <span><i class="fas fa-home"></i> Arquitectura tradicional</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=ecomuseo-la-alcogida" class="btn">Más información</a>
                 </div>
             </article>
 
@@ -269,11 +269,11 @@
                 <img src="images/turismo/molino-antigua.jpg" alt="Molino de Antigua" loading="lazy">
                 <div class="tourism-info">
                     <h3>Molino de Antigua</h3>
-                    <p>Molino de viento restaurado convertido en museo del gofio y centro de artesanía.</p>
+                    <p>Molino de viento restaurado con museo del gofio y artesanía. Patrimonio industrial de la isla con fácil acceso y aparcamiento cercano. Visita combinable con La Alcogida.</p>
                     <div class="features">
                         <span><i class="fas fa-wind"></i> Molino</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=molino-de-antigua" class="btn">Más información</a>
                 </div>
             </article>
 
@@ -281,23 +281,23 @@
                 <img src="images/turismo/popcorn-beach.jpg" alt="Playa de las Palomitas" loading="lazy">
                 <div class="tourism-info">
                     <h3>Playa de las Palomitas</h3>
-                    <p>Pequeña cala cubierta de palomitas blancas formadas por algas calcáreas fosilizadas.</p>
+                    <p>Cala singular con rodolitos blancos que parecen palomitas. Respeta el entorno: está prohibido llevarse los rodolitos. Acceso por pista corta y aparcamiento limitado.</p>
                     <div class="features">
                         <span><i class="fas fa-star"></i> Fenómeno natural</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=playa-de-las-palomitas" class="btn">Más información</a>
                 </div>
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/salinas-carmen.webp" alt="Salinas del Carmen" loading="lazy">
+                <img src="images/turismo/Salinas-carmen.webp" alt="Salinas del Carmen" loading="lazy">
                 <div class="tourism-info">
                     <h3>Salinas del Carmen</h3>
-                    <p>Salinas artesanales en funcionamiento desde el siglo XVIII con museo de la sal.</p>
+                    <p>Salinas artesanales del siglo XVIII con museo de la sal junto al mar. Recorrido interpretativo sobre la obtención de sal y paseo por las salinas. Aparcamiento junto al museo.</p>
                     <div class="features">
                         <span><i class="fas fa-water"></i> Salinas</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=salinas-del-carmen" class="btn">Más información</a>
                 </div>
             </article>
 
@@ -305,11 +305,11 @@
                 <img src="images/turismo/punta-pesebre.jpg" alt="Punta de Pesebre" loading="lazy">
                 <div class="tourism-info">
                     <h3>Punta de Pesebre</h3>
-                    <p>Punto extremo norte de Fuerteventura con vistas a Lanzarote y acantilados dramáticos.</p>
+                    <p>Extremo occidental con paisajes volcánicos y vistas al Atlántico. Acceso por pistas sin asfaltar; evita con mal tiempo. Zona ventosa: lleva ropa adecuada y precaución.</p>
                     <div class="features">
                         <span><i class="fas fa-compass"></i> Extremo norte</span>
                     </div>
-                    <a href="#" class="btn">Más información</a>
+                    <a href="turismo-detalle.html?id=punta-de-pesebre" class="btn">Más información</a>
                 </div>
             </article>
         </div>
