--- a/test-news-debug.html
+++ b/test-news-debug.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debug Noticias - Responsive</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net; style-src 'self'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' http://localhost:* https://thisisfuerteventura.netlify.app; base-uri 'self'; object-src 'none'; frame-ancestors 'self';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net; style-src 'self'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' http://localhost:* https://thisisfuerteventura.es; base-uri 'self'; object-src 'none'; frame-ancestors 'self';">
     <link rel="stylesheet" href="css/test.css?v=2025111612">
 </head>
 <body>
